fixed some spacing issues with new title

--- a/WeatherTrip/src/components/App.scss
+++ b/WeatherTrip/src/components/App.scss
@@ -33,7 +33,7 @@ html {
     //margin: auto;
     margin-left: 14%;
     //width: 80%;
-    margin-top: 40px;
+    margin-top: 25px;
     img {
         max-width: 410px;
     }
