--- a/WeatherTrip/src/components/SearchForm.scss
+++ b/WeatherTrip/src/components/SearchForm.scss
@@ -1,7 +1,7 @@
 .search-container {
 	margin-left: 20%;
 	text-align: left;
-	margin-top: 60px;
+	margin-top: 0px;
 	h3 {
 		margin: 10px 0px;
 		font-size: 2.2em;
